src/Component/Test/Test.css
.news{
    background-color: rgba(78, 148, 79,0.08);
    height: 50rem;
    padding-top: 10rem;
}

.news>h1{
    text-align: center;
    text-decoration: underline;
    font-weight: bold;
    padding: 2rem 0;
}

.news-container{
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.image-news{
    width: 100%;
    height: 35rem;
    padding: 5%;
}

.image-news:hover{
    transform: scale(1.1);
    transition: 0.6s;
}

.text-news{
    width: 50%;
    padding: 5%;
}

.text-news>h1{
    margin: 1rem 0;
    font-size: 2rem;
}

.text-news>p{
    margin: 1rem 0;
    font-size: 1.5rem;
}

@media only screen and (max-width: 600px) {
    .news{
        background-color: rgba(78, 148, 79,0.08);
        height: auto;
        padding-top: 2rem;
    }
    
    /* .news>h1{
        text-align: center;
        text-decoration: underline;
        font-weight: bold;
        padding: 2rem 0;
    } */
    
    .news-container{
        width: 100%;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
    }

    .image-news-c{
        width: 100%;
    }
    
    .image-news{
        width: 100%;
        height: 25rem;
        padding: 0;
    }
    
    .image-news:hover{
        transform: scale(1);
    }
    
    .text-news{
        width: 100%;
    }
    
    .text-news>h1{
        margin: 1rem;
        font-size: 2rem;
    }
    
    .text-news>p{
        margin: 1rem;
        font-size: 1.5rem;
    }
    
}

